tests/macros/local_variable/unexpected_token.stderr
error: expected `,` or `:`
 --> $DIR/unexpected_token.rs:4:39
  |
4 |     requestty::questions![Input { name; }];
  |                                       ^
