tests/macros/local_variable/unexpected_token.rs
fn main() {
    let name = "name";

    requestty::questions![Input { name; }];
}
